--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 </head>
 <body>
     
+    <div class="container-fluid">
+        <div class="container">
+            <div class="big-picture"></div>
+            <div class="slider">
+                <div class="small-picture"></div>
+                <div class="small-picture"></div>
+                <div class="small-picture"></div>
+                <div class="small-picture"></div>
+                <div class="small-picture"></div>
+            </div>
+        </div>
+    </div>
     <!-- Link js -->
     <script src="js/script.js"></script>
 </body>
