add small pictures

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Link Fontawsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- Link css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -16,11 +18,13 @@
         <div class="container">
             <div class="big-picture"></div>
             <div class="slider">
-                <div class="small-picture"></div>
-                <div class="small-picture"></div>
-                <div class="small-picture"></div>
-                <div class="small-picture"></div>
-                <div class="small-picture"></div>
+                <div class="small-picture"><img src="img/01.jpg" alt=""></div>
+                <div class="small-picture"><img src="img/02.jpg" alt=""></div>
+                <div class="small-picture"><img src="img/03.jpg" alt=""></div>
+                <div class="small-picture"><img src="img/04.jpg" alt=""></div>
+                <div class="small-picture"><img src="img/05.jpg" alt=""></div>
+                <div class="previous"><i class="fas fa-arrow-circle-up"></i></div>
+                <div class="next"><i class="fas fa-arrow-circle-down"></i></div>
             </div>
         </div>
     </div>
