add next prev functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     
     <div class="container-fluid">
         <div class="container">
-            <div class="big-picture"></div>
+            <div class="big-picture">
+                <img class="active" src="img/01.jpg" alt="">
+                <img src="img/02.jpg" alt="">
+                <img src="img/03.jpg" alt="">
+                <img src="img/04.jpg" alt="">
+                <img src="img/05.jpg" alt="">
+            </div>
             <div class="slider">
                 <div class="small-picture"><img src="img/01.jpg" alt=""></div>
                 <div class="small-picture"><img src="img/02.jpg" alt=""></div>
