--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <div class="small-picture"><img src="img/03.jpg" alt=""></div>
                 <div class="small-picture"><img src="img/04.jpg" alt=""></div>
                 <div class="small-picture"><img src="img/05.jpg" alt=""></div>
-                <div class="previous able"><i class="fas fa-arrow-circle-up"></i></div>
-                <div class="next able"><i class="fas fa-arrow-circle-down"></i></div>
+                <div class="previous"><i class="fas fa-arrow-circle-up"></i></div>
+                <div class="next"><i class="fas fa-arrow-circle-down"></i></div>
             </div>
         </div>
     </div>
